@@ -3,10 +3,12 @@ DIST blaze-0.4.2.tar.gz 751086 SHA256 8916b83cf54c67d0b4c4c175b8e8b62c78c5aa04e4
 DIST blaze-0.5.0.tar.gz 751362 SHA256 ae3120daeaac7099c768c4e492ae44d3dbc0c4b7a25959a80f93a8701e1c0267 SHA512 e165daf8952b30ec52b7be8db26b84a68aa28d885c1936c1fd39da214621ddeb28f0d7261b30912fb0f0e8fab5c0e2c6ced37ade822e9c49d63b5597159ebc96 WHIRLPOOL 68f4e364b4e028ae44f86e23071944fc954c91e0d27dc53c19aded05843a2e9f5962d4252b5ec2e1a5ff61bc03d024d369adec241d84ce6f735984708a8fbdc6
 DIST blaze-0.6.0.tar.gz 639673 SHA256 5d054d75d8a6c49f14b0f685ed4f5722f509de3021aaa47c0434418f2458383d SHA512 07972d2f530e438f4c0637892c5f5ccee5b0d2a68c263a2e4265fa7832b94bee0005c54896735aa0bd8f57dd81e77119176541c87d405fada7a44177e4c350b2 WHIRLPOOL fd4fd0754202a65facd82f98781bd66d0b412546f1539247287d9978690d4f142a97997432deccd1c427066fd7f4953e09be70ae8bdd31eabc4a167f4bcd2d3b
 DIST blaze-0.6.5.tar.gz 809184 SHA256 da469283eaac7b9d7f0f3ee04a4eadfdde3592b6500d972f11909b9defd62325 SHA512 590ee9c3cded4628af77e0e36e3db372f03a22a87011e7c57114b3ead0b751b5a4a7c93db01e2b579db3fe6ef10bea71004033c8831bea85cdd3c8e09d86beba WHIRLPOOL 32550623814d8bc78934304a943e8abe5a5330f2699b625083afb6c0f227f1bad7baea167641596719d5b1087001bacdee716bbf5a9f27109d4a47c2fc3b133f
+DIST blaze-0.6.6.tar.gz 840822 SHA256 890920923643e71fd2784df0c3f126ed058fc4b7a0cf57ffed7b596c4a18bebd SHA512 e69e428430d7fd9badc42bad3a1d605fd7e984548d62a06b385d62ee8d6c9c8e2ae4c96baab7c7b5a24cd44e8a09d26e567311c023614d47cc07546df47379ef WHIRLPOOL 43ccee02e9a6e500faddfe235961746ee98f4d492908f0e2170de6b820b510df750cf6795a0c35489dc182ba73997df3d81f92f3d3aac081728b00ae22be7452
 EBUILD blaze-0.4.1.ebuild 1301 SHA256 c097056145c28c887987478183a89028046e5d6d803b486840c1a71274c22a40 SHA512 ed273e75d51360a6026a389e263a0aac51a1d5e4af32ffa4c18ee8f84fef5ddf42dc97b63317385abb4e0e856660e0f70dd91e5b3a664e7ac2d0d9ad898ba409 WHIRLPOOL 5ed90f4d4d08470f0d8fcd62e034af1fef0fcb887c0464c370ae11b08ee61d5e8b0235ff4e7b8c8f4e2546d97425b8231793e01d7f79c7cdfe0ed272db11ede6
 EBUILD blaze-0.4.2.ebuild 1301 SHA256 8f8d5cd5cd4527e7300c50b6dfa36851e55c6e216236e2a378d795fcd46806a7 SHA512 b17811095c0eaab8aeb89b320ac13dbde022c87949b332caa9813cb65e6b878c8f6154eb75f85dbd7bf3ec84cfdc43cb4b6f5c3a8b70ecef16fc58dcf425e2c8 WHIRLPOOL 51dd46e6325b641e1afee5036e64480d438eca4c197a2f7e8154bd221b4c0fe50d637fc192e1e175596d428ba977b61df2a5d8f39f1fd2528759c06b4ca684aa
 EBUILD blaze-0.5.0.ebuild 1450 SHA256 fc0fd6b4ed91fd8ed2cac7ed65905b0bd6942424c8793dcb8b11c79287982bdb SHA512 c03950692d33402e720a68d6e8f6893e9308339f13e10680fd5703de5cb0ae53c19aed1d0e492bbc1dee08279a4127d3ffe7041b3b24b0caec73415263f69bcb WHIRLPOOL acc3b2b0fe0d386eb077bdbcca2d945ff77a7905d7107f859fe1c460406057a69c88cf910643557504486d0f2f66a2a721adfb86a734172785d99582814fdc1b
 EBUILD blaze-0.6.0.ebuild 1658 SHA256 619f48b097841b683633a2d971336d943de07598b077543c17892c747594ab41 SHA512 88ee5097029da81ecd8c58ca16c2f2d8c2697d50adaa10c9f6fc45bf477576597b7d0eb1655f7eba6bf61721ad30f00ccaa4553462dbcff98d5da78c5f540a54 WHIRLPOOL d5de1760e3e8e7304b776df4d820168ce05c84c0f703b489dc6fcbaa0af3106c3e66e87e8395a6c894ae84d8919dcbbf1755b4c38a62aed1dac848e8d8ba8122
 EBUILD blaze-0.6.5.ebuild 2666 SHA256 7ba2e035328d5f9334f04662598a92499ca5cf65e07b7e2a95c16a26c160bfa2 SHA512 17e6e35b6c90b88ce8f5d4da9699934f61751d37176a751cb98e8d4a5c77c15412d2bad878da4fa369140714933e71c6969687d31a9a7b62d46f9f54ccb0be92 WHIRLPOOL ae9d118f69ad9f6944503d8a939529e88f123aaa95ff1f9a43551578561aa4488f10f35e668e4a621815e9c1ea1e58017a49d91454f93edcad4644f8e027bd4b
-MISC ChangeLog 1502 SHA256 1d79dd369e52ffbfa3f3a6ea73893a7815c8e52ad4e4372dc0105c794c239d65 SHA512 9d11442feb806e5a183a4acba41fe5a2ce83322f9316313ca9b7b6182357c30d634ad7bcf3b693369c8690c54a2a4465ebf8e2477bbd43695cc923d18158c145 WHIRLPOOL 766501ec1f70a0e575acae97ecf5f67088f1b43793e05434cca9bac64a258e36d179a9886927a6200045312a14663e57d4e3b0519a13b9112060c4d7abe42b89
+EBUILD blaze-0.6.6.ebuild 2703 SHA256 b7a1af81d1b6a318544a312f2c39058019a67bd95087022323a11ce98f21570a SHA512 6de9d3b8f3d971ad8c2b74b52e912cce3cba9aac154d32415a042ebd41901019c7d3d30d34f4956f36620c21d33ab359eae4701fefbba5fd23a3c1ac3ab55b3d WHIRLPOOL 717b81d217ab65206093e87169692cf7b9c0b059cd19a0b69f08eb3037f7f427bf2419e011047a9ec6c0c6a770b347d989479cd5e5067cf2ba1465a648a96f18
+MISC ChangeLog 1609 SHA256 de0e7d8730ebbea958eade4cb1ad534bdb5afae48c776e29cf795fc13b2b7c42 SHA512 334c71af1d27a3414ec064c648f7fa1dc486b309950ed44f6138008bf7bc61b6c1eadfde8e1e55ffb2052672624d92a1a65d0f88482e163aedc0ae38aad03baf WHIRLPOOL 2773fe7cf4bec716a0a64310a851b37e372f92bce36e9d3a6d7b58888952b19d26a5ead8e3a91c87b812578063a5e1dbca0f877aed68b484cb08426c14376b99
 MISC metadata.xml 444 SHA256 3b34caf899828e49ff64ef22e0f3d2953e043d99d0c56a291a9456b1453a6f4a SHA512 53a353b79549b0e6c42181702e086e8d8f410d1a33a4e557cfaf784e4c845254330821e99d057018016f1abe89d897ab8143c1cac0a7b644cda2354b648f2455 WHIRLPOOL 88779c4487d94a00056e65e26a68cc0267241b740d146c3b0bc9a05b9fe8d1bfa56ca31361957abfa00f18dbd77d12b23f75bce37c75b45544908c75d4f0bc02
